Customer-Support-Ticketing-System-Init

--- a/LibraryManagement/templates/Dashboard.html
+++ b/LibraryManagement/templates/Dashboard.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>DashBoard</title>
 </head>
 <body>
-    <ul>
-        <a href="/login">Login</a>
-        <a href="/signup">SignUp</a>
-    </ul>
+    Welcome to the new world {{username}}  !!! 
+    <a href="logout">Logout</a>
 </body>
 </html>
