--- a/LibraryManagement/templates/home.html
+++ b/LibraryManagement/templates/home.html
@@ -3,12 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Home</title>
 </head>
 <body>
+    <center>
     <ul>
-        <a href="/login">Login</a>
+        <br><br>
+        <a href="/login">Login</a> <br><br>
         <a href="/signup">SignUp</a>
     </ul>
+    </center>
+    
 </body>
 </html>
